--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -22,6 +22,14 @@ form p {
 	margin-bottom: 24px;
 }
 
+input {
+    font-family: tahoma, verdana, sans-serif;
+    font-size: 1.0em;
+    margin-left: 5px;
+    padding-left: 2px;
+    padding-right: 3px;
+}
+
 a {
 	text-decoration: none;
 }
