--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -22,16 +22,48 @@ form {
 	border-radius: 5px;
 }
 
+.form {
+    width: 350px;
+    margin-top: 20px;
+}
+
+.form form input {
+    color: #555;
+}
+
+.form form .submit input {
+    background-color: #e5e5e5;
+    color: #246;
+    border-color: #80b5d0;
+    padding: 3px 5px;
+    border: none;
+    border-width: 1px;
+    border-style: solid;
+    -moz-border-radius: 3px;
+    -khtml-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.form form .submit input:hover {
+    color: #d54e21;
+    border-color: #328ab2;
+}
+
 form p {
 	margin-bottom: 24px;
 }
 
 input {
     font-family: tahoma, verdana, sans-serif;
-    font-size: 1.0em;
+    font-size: 15px;
     margin-left: 5px;
     padding-left: 2px;
     padding-right: 3px;
+}
+
+form .submit {
+    float: right;
 }
 
 a {
@@ -55,26 +87,51 @@ a {
     padding: 0;
 }
 
-#main-nav li {
+#main-nav .level1 {
     float: left;
+    list-style: none;
+    background-repeat: no-repeat;
 }
 
-#main-nav li a {
+#main-nav .level2 {
+    float: left;
+    list-style: none;
+    background-repeat: no-repeat;
+}
+
+#main-nav .level1 a {
     display: block;
     height: 0px !important;
     padding: 50px 0 0 0;
     overflow: hidden;
-    background-repeat: no-repeat;
 }
 
-#main-nav li a:hover {
+#main-nav .level1 a:hover {
     background-position: 0 -50px;
 }
 
-#main-nav li#dashboard,
-#main-nav li#dashboard a {
+#main-nav .level1#DashBoard,
+#main-nav .level1#DashBoard a {
     width: 120px;
     background-image: url(images/menu/dashboard.png);
+}
+
+#main-nav .level1#Sessions,
+#main-nav .level1#Sessions a {
+    width: 100px;
+    background-image: url(images/menu/sessions.png);
+}
+
+#main-nav .level1#Plans,
+#main-nav .level1#Plans a {
+    width: 70px;
+    background-image: url(images/menu/plans.png);
+}
+
+#main-nav .level1#UserManagement,
+#main-nav .level1#UserManagement a {
+    width: 200px;
+    background-image: url(images/menu/user_management.png);
 }
 
 /* Header */
@@ -137,8 +194,3 @@ a {
     text-align: right;
 }
 
-/* Old stuff */
-.sessiongraphs td {
-/*    background:     #e9e7e7;*/
-    vertical-align: top;
-}
